login for admin

--- a/AdminApp/appsettings.json
+++ b/AdminApp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AdminAppContextConnection": "Server=DESKTOP-1GUJ3IL\\SQLEXPRESS;Database=AdminApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
